--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="date1">第1希望日※必須</label>
+        <label for="date1">第1希望日※必須・希望時間は30分単位でお願いします</label>
         <input type="datetime-local" id="date1" step="1800" placeholder="タップして日時を入力">
 
         <label for="date2">第2希望日</label>
