--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="date1">第1希望日※必須・希望時間は30分単位でお願いします</label>
+        <label for="name">お客様名※必須</label>
+        <input type="text" id="name" placeholder="お名前を入力してください">
+
+        <label for="phone">電話番号※必須</label>
+        <input type="tel" id="phone" placeholder="電話番号を入力してください">
+
+        <label for="date1">第1希望日※必須</label>
         <input type="datetime-local" id="date1" step="1800" placeholder="タップして日時を入力">
 
         <label for="date2">第2希望日</label>
@@ -128,7 +134,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -174,7 +180,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\n新規orリピーター：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\n新規orリピーター：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
                 // LIFFウィンドウを閉じる
