--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <label>コース※必須てｓｔ</label>
+        <label>コース※必須テストン！</label>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this)">整体・ボディケア60分</button>
             <button type="button" onclick="selectSymptom(this)">整体ボディケア＋セルフ整体エクササイズ</button>
