--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名いいい※必須</label>
+        <label for="name">お客様名ううう※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <label for="phone">電話番号※必須</label>
@@ -137,7 +137,7 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
-        let other-Symptoms = '';
+        let otherSymptoms = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
@@ -196,7 +196,7 @@
                 phone,
                 visitCount,
                 symptoms, // 通常の症状
-                other-Symptoms: selectedOtherSymptoms, // その他の症状
+                otherSymptoms: selectedOtherSymptoms, // その他の症状
                 dates: [date1, date2, date3],
                 message
             };
@@ -204,7 +204,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\nコース：${formData.selectedSymptom}\n症状：${formData.other-Symptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\nコース：${formData.selectedSymptom}\n症状：${formData.otherSymptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
                 // LIFFウィンドウを閉じる
