--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名ううう※必須</label>
+        <label for="name">お客様名えええ※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <label for="phone">電話番号※必須</label>
@@ -167,8 +167,6 @@
             element.classList.add('active');
             selectedSymptom = element.innerText;
         }
-
-        let selectedOtherSymptoms = []; // 選択されたその他の症状を保存する配列
 
         function selectVisit(element) {
             document.getElementById('firstOther').classList.remove('active');
