--- a/index.html
+++ b/index.html
@@ -168,20 +168,13 @@
             selectedSymptom = element.innerText;
         }
 
-        let selectedOtherSymptoms = []; // 選択されたその他の症状を保存する配列
-
-        function toggleOtherSymptom(element) {
-            element.classList.toggle('active'); // ボタンの状態を切り替える
-
-            if (element.classList.contains('active')) {
-                selectedOtherSymptoms.push(element.innerText); // ボタンが選択されたら配列に追加
-            } else {
-                const index = selectedOtherSymptoms.indexOf(element.innerText);
-                if (index !== -1) {
-                    selectedOtherSymptoms.splice(index, 1); // ボタンが選択解除されたら配列から削除
-                }
-            }
-        }
+function selectVisit(element) {
+    document.querySelectorAll('.othersymptoms').forEach(function (el) {
+        el.classList.remove('active');
+    });
+    element.classList.add('active');
+    visitCount = element.innerText;
+}
 
         function submitForm() {
             const name = document.getElementById('name').value;
