--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名かか※必須</label>
+        <label for="name">お客様名きき※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <label for="phone">電話番号※必須</label>
@@ -137,7 +137,7 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
-        let other-symptoms = '';
+        let othersymptoms = '';
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
@@ -168,13 +168,13 @@
             selectedSymptom = element.innerText;
         }
 
-function selectVisit(element) {
-    document.querySelectorAll('.othersymptoms').forEach(function (el) {
-        el.classList.remove('active');
-    });
-    element.classList.add('active');
-    visitCount = element.innerText;
-}
+        function selectVisit(element) {
+            document.querySelectorAll('.othersymptoms').forEach(function (el) {
+            el.classList.remove('active');
+            });
+            element.classList.add('active');
+            visitCount = element.innerText;
+        }
 
         function submitForm() {
             const name = document.getElementById('name').value;
@@ -197,7 +197,7 @@ function selectVisit(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\nコース：${formData.selectedSymptom}\n症状：${formData.other-symptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\nコース：${formData.selectedSymptom}\n症状：${formData.othersymptoms.join(', ')}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
                 // LIFFウィンドウを閉じる
