--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 phone,
                 visitCount,
                 symptoms, // 通常の症状
-                other-symptoms: selectedOtherSymptoms, // その他の症状
+                othersymptoms: selectedOtherSymptoms, // その他の症状
                 dates: [date1, date2, date3],
                 message
             };
