--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム</h1>
-        <label for="name">お客様名きき※必須</label>
+        <label for="name">お客様名kuku※必須</label>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <label for="phone">電話番号※必須</label>
@@ -137,7 +137,7 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
-        let othersymptoms = '';
+        let selectedOtherSymptoms = [];
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
@@ -196,7 +196,7 @@
                 phone,
                 visitCount,
                 symptoms, // 通常の症状
-                othersymptoms: selectedOtherSymptoms, // その他の症状
+                otherSymptoms: selectedOtherSymptoms,
                 dates: [date1, date2, date3],
                 message
             };
