--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
             selectedSymptom = element.innerText;
         }
 
-        let selectedOtherSymptoms = []; // 選択されたその他の症状を保存する配列
-
-        function toggleOtherSymptom(element) {
+        function selectOtherSymptom(element) {
             element.classList.toggle('active'); // ボタンの状態を切り替える
 
             if (element.classList.contains('active')) {
