--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
             selectedSymptom = element.innerText;
         }
 
-        function selectOtherSymptom(element) {
+        let selectedOtherSymptoms = []; // 選択されたその他の症状を保存する配列
+
+        function toggleOtherSymptom(element) {
             element.classList.toggle('active'); // ボタンの状態を切り替える
 
             if (element.classList.contains('active')) {
