--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             selectedSymptom = element.innerText;
         }
 
-        function toggleSymptom(element) {
+        function toggleOtherSymptom(element) {
             element.classList.toggle('active'); // ボタンの状態を切り替える
 
             if (element.classList.contains('active')) {
