--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <button type="button" onclick="selectSymptom(this)">整体ボディケア＋セルフ整体エクササイズ</button>
         </div>
 
-        <label>症状</label>
+        <label>症状（複数選択可能）</label>
         <div class="other-symptoms">
             <button type="button" onclick="toggleOtherSymptom(this)">腰が痛い</button>
             <button type="button" onclick="toggleOtherSymptom(this)">肩が痛い</button>
