--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>予約フォーム</title>
+    <title>占いフォーム</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -105,10 +105,10 @@
             <button type="button" onclick="selectSymptom(this)">天命</button>
         </div>
 
-        <label for="date1">お誕生日（お時間は何時でも可）</label>
+        <label for="date1">生年月日（お時間は何時でも可）</label>
         <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
 
-        <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
+        <label for="message">メッセージ（お悩みなどあればご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <button class="submit-button" onclick="submitForm()">占いを行う</button>
@@ -164,7 +164,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n希望占い：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('ご記入いただいた誕生日から占い結果をお伝えしますのでしばらくお待ちください... ' );
                 // LIFFウィンドウを閉じる
