--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
         </div>
 
         <label for="date1">生年月日（お時間は何時でも可）</label>
-        <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
+        <input type="datetime-local" id="date1">
 
         <label for="message">メッセージ（お悩みなどあればご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <button class="submit-button" onclick="submitForm()">占いを行う</button>
+        <button type="button" class="submit-button" onclick="submitForm()">占いを行う</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
@@ -122,7 +122,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                id: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
