--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: 'あなたのLIFF_IDをここに入力' // ここにあなたのLIFF IDを入力
+                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -154,7 +154,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：\n${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('ご記入いただいた誕生日から占い結果をお伝えしますのでしばらくお待ちください...');
                 // LIFFウィンドウを閉じる
