--- a/index.html
+++ b/index.html
@@ -165,10 +165,15 @@
             });
         }
 
-        function formatDate(date) {
-            if (!date) return '';
-            const [year, month, day] = date.split('-');
-            return `${year}年${month}月${day}日`;
+        function formatDate(datetime) {
+            if (!datetime) return '';
+            const date = new Date(datetime);
+            const year = date.getFullYear();
+            const month = ('0' + (date.getMonth() + 1)).slice(-2);
+            const day = ('0' + date.getDate()).slice(-2);
+            const hours = ('0' + date.getHours()).slice(-2);
+            const minutes = ('0' + date.getMinutes()).slice(-2);
+            return `${year}年${month}月${day}日 ${hours}:${minutes}`;
         }
     </script>
 </body>
