--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【占いフォーム】\n希望占い：${formData.visitCount}\n何を占いたいですか？：${formData.selectedSymptom}\n生年月日：${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 alert('ご記入いただいた誕生日から占い結果をお伝えしますのでしばらくお待ちください...');
                 // LIFFウィンドウを閉じる
