--- a/index.html
+++ b/index.html
@@ -100,15 +100,10 @@
 
         <label>症状※必須</label>
         <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this)">頭痛・偏頭痛</button>
-            <button type="button" onclick="selectSymptom(this)">交通事故施術</button>
-            <button type="button" onclick="selectSymptom(this)">肩こり・腕のしびれ</button>
-            <button type="button" onclick="selectSymptom(this)">臀部・下肢の痛みや痒れ</button>
-            <button type="button" onclick="selectSymptom(this)">ぎっくり腰・慢性腰痛</button>
-            <button type="button" onclick="selectSymptom(this)">寝違い・むち打ち等首の症状</button>
-            <button type="button" onclick="selectSymptom(this)">EMS(電気的筋肉刺激装置)トレーニング</button>
-            <button type="button" onclick="selectSymptom(this)">健康保険の施術</button>
-            <button type="button" onclick="selectSymptom(this)">その他</button>
+            <button type="button" onclick="selectSymptom(this)">軽症</button>
+            <button type="button" onclick="selectSymptom(this)">中等症</button>
+            <button type="button" onclick="selectSymptom(this)">重症</button>
+
         </div>
 
         <label for="date1">第1希望日※必須<br>希望時間は30分単位でお願いします</label>
