--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         </div>
 
-        <label for="date1">第1希望日※必須<br>希望時間は30分単位でお願いします</label>
+        <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
         <input type="datetime-local" id="date1" placeholder="タップして日時を入力">
 
         <label for="date2">第2希望日</label>
