--- a/index.html
+++ b/index.html
@@ -172,19 +172,26 @@
                 message
             };
 
-            // LINEトークにメッセージを送信
-            liff.sendMessages([{
-                type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n訪問回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
-            }]).then(() => {
-                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。 ' );
-                // LIFFウィンドウを閉じる
-                liff.closeWindow();
-            }).catch((err) => {
-                // 失敗時の処理（エラーメッセージを表示しない）
-                console.error('メッセージの送信に失敗しました', err);
-            });
-        }
+// フォームデータのチェック
+if (!formData.name || !formData.phone || !formData.visitCount) {
+    alert('入力不足です');
+    return;
+}
+
+// LINEトークにメッセージを送信
+liff.sendMessages([{
+    type: 'text',
+    text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}${formData.visitCount}${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\n${formData.dates[2]}\nメッセージ：${formData.message}`
+}]).then(() => {
+    /* メッセージ送信成功時の処理 */
+    alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
+    /* LIFFウィンドウを閉じる */
+    liff.closeWindow();
+}).catch((err) => {
+    /* メッセージ送信失敗時の処理 */
+    console.error('メッセージの送信に失敗しました', err);
+});
+}
 
         function formatDate(datetime) {
             if (!datetime) return '';
