--- a/index.html
+++ b/index.html
@@ -161,13 +161,36 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
+        let currentYear, currentMonth;
 
-        // カレンダーを生成する関数
         function createCalendar(id, year, month) {
             const calendar = document.getElementById(id);
             calendar.innerHTML = '';
+
+            currentYear = year;
+            currentMonth = month;
+
             const date = new Date(year, month);
             const days = ['日', '月', '火', '水', '木', '金', '土'];
+
+            // カレンダーのナビゲーション
+            const nav = document.createElement('div');
+            nav.style.display = 'flex';
+            nav.style.justifyContent = 'space-between';
+
+            const prevMonthBtn = document.createElement('button');
+            prevMonthBtn.textContent = '前の月';
+            prevMonthBtn.onclick = () => changeMonth(id, -1);
+
+            const nextMonthBtn = document.createElement('button');
+            nextMonthBtn.textContent = '次の月';
+            nextMonthBtn.onclick = () => changeMonth(id, 1);
+
+            nav.appendChild(prevMonthBtn);
+            nav.appendChild(nextMonthBtn);
+            calendar.appendChild(nav);
+
+            // 曜日ヘッダー
             const table = document.createElement('table');
             const headerRow = document.createElement('tr');
             days.forEach(day => {
@@ -207,6 +230,13 @@
             } else {
                 calendar.style.display = 'none';
             }
+        }
+
+        function changeMonth(id, offset) {
+            const newMonth = currentMonth + offset;
+            const newYear = newMonth < 0 ? currentYear - 1 : newMonth > 11 ? currentYear + 1 : currentYear;
+            const month = (newMonth + 12) % 12;
+            createCalendar(id, newYear, month);
         }
 
         function selectDate(id, year, month, day) {
